--- a/L6.5/pom.xml
+++ b/L6.5/pom.xml
@@ -41,7 +41,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>example.Main</mainClass>
+                            <mainClass>example.MainFinal</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
