--- a/L5.1/pom.xml
+++ b/L5.1/pom.xml
@@ -40,7 +40,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
-                            <mainClass>example.Main</mainClass>
+                            <mainClass>example.MainFinal</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
