--- a/L7.3.Final/pom.xml
+++ b/L7.3.Final/pom.xml
@@ -34,7 +34,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>Main</mainClass>
+                            <mainClass>MainFinal</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
